<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>net.risesoft</groupId>
    <artifactId>y9-digitalbase</artifactId>
    <packaging>pom</packaging>
    <version>${revision}</version>
    <name>y9-digitalbase</name>
    <description>RiseSoft/Digital Infrastructure Parent</description>
    <url>https://gitee.com/risesoft-y9/y9-core/tree/main/</url>
    <licenses>
        <license>
            <name>GNU General Public License (GPL) version 3.0</name>
            <url>https://www.gnu.org/licenses/gpl-3.0.en.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>dingzhaojun</name>
            <email>dingzhaojun@risesoft.net</email>
            <organization>risesoft</organization>
            <organizationUrl>https://www.risesoft.net</organizationUrl>
        </developer>

        <developer>
            <name>qinman</name>
            <email>qinman@risesoft.net</email>
            <organization>risesoft</organization>
            <organizationUrl>https://www.risesoft.net</organizationUrl>
        </developer>

        <developer>
            <name>shidaobang</name>
            <email>shidaobang@risesoft.net</email>
            <organization>risesoft</organization>
            <organizationUrl>https://www.risesoft.net</organizationUrl>
        </developer>

        <developer>
            <name>mengjuhua</name>
            <email>mengjuhua@risesoft.net</email>
            <organization>risesoft</organization>
            <organizationUrl>https://www.risesoft.net</organizationUrl>
        </developer>
    </developers>

    <properties>
        <java.version>21</java.version>
        <maven.deploy.skip>true</maven.deploy.skip>

        <gitee.url>https://gitee.com/risesoft-y9/y9-core</gitee.url>
        <gitee.connection>scm:git:https://gitee.com/risesoft-y9/y9-core.git</gitee.connection>
        <gitee.developerConnection>scm:git:https://gitee.com/risesoft-y9/y9-core.git</gitee.developerConnection>

        <revision>v9.7.0-SNAPSHOT</revision>
        
        <git-commit-id-maven-plugin.version>8.0.2</git-commit-id-maven-plugin.version>
    </properties>

    <scm>
        <url>${gitee.url}</url>
        <connection>${gitee.connection}</connection>
        <developerConnection>${gitee.developerConnection}</developerConnection>
    </scm>

    <modules>
        <module>y9-digitalbase-dependencies</module>
        <module>y9-digitalbase-parent</module>
        <module>y9-digitalbase-common</module>
        <module>y9-digitalbase-starter</module>
        <module>./y9-digitalbase-support/risenet-y9boot-support-file-jpa-repository</module>
        <module>./y9-digitalbase-support/risenet-y9boot-support-file-service-ftp</module>
        <module>./y9-digitalbase-support/risenet-y9boot-support-file-service-local</module>
        <module>./y9-digitalbase-support/risenet-y9boot-support-file-service-rest</module>
        <module>./y9-digitalbase-support/risenet-y9boot-support-history</module>
        <module>y9-digitalbase-module</module>
        <module>y9-digitalbase-example</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <!--<dependency>
                <groupId>net.risesoft</groupId>
                <artifactId>y9-digitalbase-dependencies</artifactId>
                <version>${revision}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>-->
        </dependencies>

    </dependencyManagement>

    <repositories>
        <repository>
            <id>spring-snapshots</id>
            <url>https://repo.spring.io/snapshot</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>spring-milestones</id>
            <url>https://repo.spring.io/milestone</url>
        </repository>
        <repository>
            <id>aliyun-repo</id>
            <url>https://maven.aliyun.com/repository/public</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>y9-internet-repo</id>
            <url>https://svn.youshengyun.com:9900/nexus/repository/maven-public/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>spring-snapshots</id>
            <url>https://repo.spring.io/snapshot</url>
        </pluginRepository>
        <pluginRepository>
            <id>spring-milestones</id>
            <url>https://repo.spring.io/milestone</url>
        </pluginRepository>
        <pluginRepository>
            <id>aliyun-repo-plugin</id>
            <url>https://maven.aliyun.com/repository/public</url>
        </pluginRepository>
        <pluginRepository>
            <id>y9-internet-repo-plugin</id>
            <url>https://svn.youshengyun.com:9900/nexus/repository/maven-public/</url>
        </pluginRepository>
    </pluginRepositories>

    <build>
        <plugins>
            <plugin>
                <groupId>io.github.git-commit-id</groupId>
                <artifactId>git-commit-id-maven-plugin</artifactId>
                <version>${git-commit-id-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <id>get-the-git-infos</id>
                        <goals>
                            <goal>revision</goal>
                        </goals>
                        <phase>initialize</phase>
                    </execution>
                </executions>
                <configuration>
                    <!-- <verbose>true</verbose> -->
                    <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
                    <failOnNoGitDirectory>false</failOnNoGitDirectory>
                    <!-- 对于多个仓库聚合不会更新 git 的信息 -->
                    <!-- <injectAllReactorProjects>true</injectAllReactorProjects> -->
                    <generateGitPropertiesFile>true</generateGitPropertiesFile>
                    <generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties
                    </generateGitPropertiesFilename>
                    <commitIdGenerationMode>full</commitIdGenerationMode>
                </configuration>
            </plugin>
        </plugins>

        <!-- 动态编译环境配置 -->
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <excludes>
                    <exclude>profiles/*</exclude>
                </excludes>
            </resource>
            <resource>
                <directory>src/main/resources/profiles/${dir}</directory>
            </resource>
        </resources>

    </build>

    <profiles>
        <profile>
            <!-- 本机个人开发环境 -->
            <id>env-local</id>
            <properties>
                <dir>local</dir>
            </properties>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
        </profile>
        <profile>
            <!-- 本地团队开发环境 -->
            <id>env-dev</id>
            <properties>
                <dir>dev</dir>
            </properties>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
        </profile>
        <profile>
            <!-- 测试环境 -->
            <id>env-test</id>
            <properties>
                <dir>test</dir>
            </properties>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
        </profile>
        <profile>
            <!-- 生产环境 -->
            <id>env-prod</id>
            <properties>
                <dir>prod</dir>
            </properties>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
        </profile>
    </profiles>
</project>